--- a/_app/_layouts/post.html
+++ b/_app/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <article>
   <header>
     <h1>{{ page.title | escape }}</h1>
+    <p>{{ page.date | date: "%B %d, %Y" }}</p>
   </header>
 
   {{ content }}
