--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -1,57 +1,120 @@
 :root {
-  --clr-primary: #ee6352;
-  --clr-secondary: #d16e8d;
-  --clr-accent: #7e7ee5;
-  --clr-gradient: linear-gradient(-90deg, var(--clr-primary), var(--clr-secondary));
-  --clr-code-bg: #222;
-  --clr-code-fg: #F7F7FF;
-  --ff-title: bungee, sans-serif;
-  --fw-title: 800;
-  --ff-body: canada-type-gibson, sans-serif;
-  --fw-body: 300;
+  --clr-primary: tomato;
+  --clr-neutral: #262626;
+  --clr-background: #F9F3E6;
+
+  --ff-body: 'Source Serif 4', serif;
+  --ff-header: 'Oswald', sans-serif;
+  --fs-1: 1rem;
+  --fs-2: 1.25rem;
+  --fs-3: 2.5rem;
+  --fs-4: 3rem;
+  --fs-5: 4rem;
+  --fw-1: 300;
+  --fw-2: 400;
+  --fw-3: 600;
+
+  --flow-spacer: 1em;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  background-color: var(--clr-background);
+
+  /* font sizes */
+  text-rendering: optimizeSpeed;
   font-family: var(--ff-body);
-  font-weight: var(--fw-body);
-  font-size: 1.25rem;
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-
-  padding: 2rem;
-}
-
-a {
-  color: inherit;
-}
-
-a:hover,
-a:focus {
-  color: var(--clr-accent);
-}
-
-:focus {
-  outline: 3px solid var(--clr-accent);
-  outline-offset: 3px;
-}
-
-h1, h2, h3, p, pre, ul {
-  margin: 1em 0 0 0;
+  font-size: var(--fs-2);
+  font-weight: var(--fw-2);
+  line-height: 1.75;
+  letter-spacing: -0.25px;
+  color: var(--clr-neutral);
 }
 
 h1, h2, h3 {
-  font-family: var(--ff-title);
-  font-weight: var(--fw-title);
+  font-family: var(--ff-header);
+  font-weight: var(--fw-3);
+  line-height: 1.1;
+  letter-spacing: -0.75px;
 }
 
-pre {
-  font-family: monospace;
-  font-size: 0.85em;
-  padding: 1rem;
+.h1, h1 {
+  font-size: var(--fs-5);
+}
+
+.h2, h2 {
+  font-size: var(--fs-4);
+}
+
+.h3, h3 {
+  font-size: var(--fs-3);
 }
 
 ul {
-  padding-left: 1em;
+  padding-left: 1rem;
+}
+
+a {
+  color: var(--clr, var(--clr-primary));
+  text-decoration-skip-ink: auto;
+}
+
+.flow > *+* {
+  margin-top: var(--flow-spacer);
+}
+
+.primary-header {
+  padding: 1rem;
+
+  h1 a {
+    --clr: var(--clr-neutral);
+    text-decoration: none;
+  }
+}
+
+.primary-footer {
+  display: grid;
+  justify-content: center;
+  border-top: 1px solid var(--clr-neutral);
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.social-media {
+  --clr: var(--clr-neutral);
+  margin: 0 auto;
+}
+
+.post-previews {
+  padding: 1rem;
+}
+
+.post {
+  margin: 1.5rem auto 3rem auto;
+  max-width: 75ch;
+  padding: 0 1.5rem;
+
+  header time {
+    font-size: var(--fs-1);
+    font-weight: var(--fw-1);
+    font-style: italic;
+  }
+
+  blockquote {
+    box-shadow: inset 3px 0 0 0 var(--clr-primary);
+    padding-left: 1rem;
+    font-style: italic;
+  }
+
+  pre {
+    padding: 1rem;
+    font-family: monospace;
+    font-size: var(--fs-1);
+  }
 }
