--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -21,53 +21,138 @@ video {
 display: block;
 max-width: 100%;
 }
+/* source-serif-4-300 - latin */
+@font-face {
+font-display: fallback;
+font-family: "Source Serif 4";
+font-style: normal;
+font-weight: 300;
+src: url("../fonts/source-serif-4-v7-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* source-serif-4-300italic - latin */
+@font-face {
+font-display: fallback;
+font-family: "Source Serif 4";
+font-style: italic;
+font-weight: 300;
+src: url("../fonts/source-serif-4-v7-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* source-serif-4-regular - latin */
+@font-face {
+font-display: fallback;
+font-family: "Source Serif 4";
+font-style: normal;
+font-weight: 400;
+src: url("../fonts/source-serif-4-v7-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* source-serif-4-italic - latin */
+@font-face {
+font-display: fallback;
+font-family: "Source Serif 4";
+font-style: italic;
+font-weight: 400;
+src: url("../fonts/source-serif-4-v7-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* oswald-600 - latin */
+@font-face {
+font-display: fallback;
+font-family: "Oswald";
+font-style: normal;
+font-weight: 600;
+src: url("../fonts/oswald-v49-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
 :root {
---clr-primary: #ee6352;
---clr-secondary: #d16e8d;
---clr-accent: #7e7ee5;
---clr-gradient: linear-gradient(-90deg, var(--clr-primary), var(--clr-secondary));
---clr-code-bg: #222;
---clr-code-fg: #F7F7FF;
---ff-title: bungee, sans-serif;
---fw-title: 800;
---ff-body: canada-type-gibson, sans-serif;
---fw-body: 300;
+--clr-primary: steelblue;
+--clr-neutral: #262626;
+--ff-body: "Source Serif 4", serif;
+--ff-header: "Oswald", sans-serif;
+--fs-1: 1rem;
+--fs-2: 1.25rem;
+--fs-3: 2.5rem;
+--fs-4: 3rem;
+--fs-5: 5rem;
+--fw-1: 300;
+--fw-2: 400;
+--fw-3: 600;
+--flow-spacer: 1em;
+}
+html {
+scroll-behavior: smooth;
 }
 body {
+display: grid;
+grid-template-rows: auto 1fr auto;
 min-height: 100vh;
+/* font sizes */
+text-rendering: optimizeSpeed;
 font-family: var(--ff-body);
-font-weight: var(--fw-body);
-font-size: 1.25rem;
-display: flex;
-flex-direction: column;
-gap: 2em;
-padding: 2rem;
-}
-a {
-color: inherit;
-}
-a:hover,
-a:focus {
-color: var(--clr-accent);
-}
-:focus {
-outline: 3px solid var(--clr-accent);
-outline-offset: 3px;
-}
-h1, h2, h3, p, pre, ul {
-margin: 1em 0 0 0;
+font-size: var(--fs-2);
+font-weight: var(--fw-2);
+line-height: 1.75;
+letter-spacing: -0.25px;
+color: var(--clr-neutral);
 }
 h1, h2, h3 {
-font-family: var(--ff-title);
-font-weight: var(--fw-title);
+font-family: var(--ff-header);
+font-weight: var(--fw-3);
+line-height: 1.1;
+letter-spacing: -0.75px;
 }
-pre {
-font-family: monospace;
-font-size: 0.85em;
-padding: 1rem;
+.h1, h1 {
+font-size: var(--fs-5);
+}
+.h2, h2 {
+font-size: var(--fs-4);
+}
+.h3, h3 {
+font-size: var(--fs-3);
 }
 ul {
-padding-left: 1em;
+padding-left: 1rem;
+}
+a {
+color: var(--clr, var(--clr-primary));
+text-decoration-skip-ink: auto;
+}
+.primary-header {
+background-color: var(--clr-primary);
+padding: 1rem;
+}
+.primary-header h1 a {
+--clr: var(--clr-neutral);
+text-decoration: none;
+}
+.primary-footer {
+display: flex;
+align-items: center;
+gap: 1rem;
+padding: 1rem;
+background-color: var(--clr-primary);
+}
+.flow > * + * {
+margin-top: var(--flow-spacer);
+}
+.post-previews {
+padding: 1rem;
+}
+.post {
+margin: 1.5rem auto;
+max-width: 60ch;
+padding: 0 1.5rem;
+}
+.post > header time {
+font-size: var(--fw-1);
+font-style: italic;
+}
+.post > blockquote {
+box-shadow: inset 3px 0 0 0 var(--clr-primary);
+padding-left: 1rem;
+font-style: italic;
+}
+.post pre {
+padding: 1rem;
+font-family: monospace;
+font-size: var(--fs-1);
 }
 .highlight pre {
 background-color: #272822;
