Colors are updated

--- a/_app/_layouts/default.html
+++ b/_app/_layouts/default.html
@@ -22,11 +22,13 @@
 
   <body>
     <header class="primary-header">
-      <h1>
-        <a href="/">Nick Arora</a>
-      </h1>
-      <p>Software engineer specializing in full stack web applications</p>
-
+      <section class="container">
+        <a href="/">na</a>
+        <nav>
+          <a href="#">blog</a>
+          <a href="#">projects</a>
+        </nav>
+      </div>
     </header>
     <main class="primary-content">
       {{ content }}
