--- a/_app/_layouts/post.html
+++ b/_app/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post flow">
+<article class="post container flow">
   <header>
     <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
     <h2>{{ page.title | escape }}</h1>
