--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -62,9 +62,10 @@ font-weight: 600;
 src: url("../fonts/oswald-v49-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 :root {
---clr-primary: tomato;
---clr-neutral: #262626;
---clr-background: #F9F3E6;
+--clr-foreground: #262626;
+--clr-background: #f5f7fa;
+--clr-primary: #dde4ee;
+--clr-accent: #467ece;
 --ff-body: "Source Serif 4", serif;
 --ff-header: "Oswald", sans-serif;
 --fs-1: 1rem;
@@ -76,6 +77,7 @@ src: url("../fonts/oswald-v49-latin-600.woff2") format("woff2"); /* Chrome 36+, 
 --fw-2: 400;
 --fw-3: 600;
 --flow-spacer: 1em;
+--container-max-width: 75ch;
 }
 html {
 scroll-behavior: smooth;
@@ -85,14 +87,13 @@ display: grid;
 grid-template-rows: auto 1fr auto;
 min-height: 100vh;
 background-color: var(--clr-background);
-/* font sizes */
 text-rendering: optimizeSpeed;
 font-family: var(--ff-body);
 font-size: var(--fs-2);
 font-weight: var(--fw-2);
 line-height: 1.75;
 letter-spacing: -0.25px;
-color: var(--clr-neutral);
+color: var(--clr-foreground);
 }
 h1, h2, h3 {
 font-family: var(--ff-header);
@@ -109,41 +110,73 @@ font-size: var(--fs-4);
 .h3, h3 {
 font-size: var(--fs-3);
 }
-ul {
+ul, ol {
 padding-left: 1rem;
 }
 a {
-color: var(--clr, var(--clr-primary));
+color: var(--clr-foreground);
+text-decoration-color: var(--clr-accent);
 text-decoration-skip-ink: auto;
+text-decoration-thickness: 3px;
+}
+hr {
+border-top: 1px dashed var(--clr-foreground);
+}
+:not(.highlight) > code {
+font-style: italic;
+padding: 0 0.25em;
+background-color: var(--clr-primary);
 }
 .flow > * + * {
 margin-top: var(--flow-spacer);
 }
-.primary-header {
-padding: 1rem;
+.container {
+max-width: var(--container-max-width);
+padding: 0 1.5rem;
+margin: 0 auto;
 }
-.primary-header h1 a {
---clr: var(--clr-neutral);
-text-decoration: none;
+.page-not-found {
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+height: 100%;
+}
+.primary-header {
+background-color: var(--clr-primary);
+padding: 0.5rem 0;
+}
+.primary-header > section {
+display: flex;
+align-items: flex-end;
+justify-content: space-between;
+}
+.primary-header a {
+text-decoration-line: none;
+}
+.primary-header a:hover {
+text-decoration-line: underline;
+}
+.primary-header nav {
+display: flex;
+gap: 1rem;
 }
 .primary-footer {
 display: grid;
 justify-content: center;
-border-top: 1px solid var(--clr-neutral);
+background-color: var(--clr-primary);
 gap: 0.5rem;
 padding: 1rem;
 }
 .social-media {
---clr: var(--clr-neutral);
 margin: 0 auto;
 }
 .post-previews {
 padding: 1rem;
 }
 .post {
-margin: 1.5rem auto 3rem auto;
-max-width: 75ch;
-padding: 0 1.5rem;
+margin-top: 1.5rem;
+margin-bottom: 3rem;
 }
 .post header time {
 font-size: var(--fs-1);
@@ -151,7 +184,7 @@ font-weight: var(--fw-1);
 font-style: italic;
 }
 .post blockquote {
-box-shadow: inset 3px 0 0 0 var(--clr-primary);
+box-shadow: inset 4px 0 0 0 var(--clr-accent);
 padding-left: 1rem;
 font-style: italic;
 }
