--- a/_app/_sass/code-highlight.scss
+++ b/_app/_sass/code-highlight.scss
@@ -1,65 +1,84 @@
-.highlight pre { background-color: #272822; }
-.highlight .hll { background-color: #272822; }
-.highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-.highlight .k { color: #66d9ef } /* Keyword */
-.highlight .l { color: #ae81ff } /* Literal */
-.highlight .n { color: #f8f8f2 } /* Name */
-.highlight .o { color: #f92672 } /* Operator */
-.highlight .p { color: #f8f8f2 } /* Punctuation */
-.highlight .cm { color: #75715e } /* Comment.Multiline */
-.highlight .cp { color: #75715e } /* Comment.Preproc */
-.highlight .c1 { color: #75715e } /* Comment.Single */
-.highlight .cs { color: #75715e } /* Comment.Special */
+:root {
+  --clr-code-background: #272822;
+  --clr-code-error: #960050;
+  --clr-code-background-error: #1e0010;
+  --clr-code-comment: #75715e;
+  --clr-code-constant: #66d9ef;
+  --clr-code-literal: #ae81ff;
+  --clr-code-name: #f8f8f2;
+  --clr-code-operator: #f92672;
+  --clr-code-date: #e6db74;
+  --clr-code-other: #a6e22e;
+}
+
+.highlight pre { background-color: var(--clr-code-background); }
+.highlight .hll { background-color: var(--clr-code-background); }
+.highlight .c { color: var(--clr-code-comment); } /* Comment */
+.highlight .k { color: var(--clr-code-constant); } /* Keyword */
+.highlight .l { color: var(--clr-code-literal); } /* Literal */
+.highlight .n { color: var(--clr-code-name); } /* Name */
+.highlight .o { color: var(--clr-code-operator); } /* Operator */
+.highlight .p { color: var(--clr-code-name); } /* Punctuation */
+.highlight .cm { color: var(--clr-code-comment); } /* Comment.Multiline */
+.highlight .cp { color: var(--clr-code-comment); } /* Comment.Preproc */
+.highlight .c1 { color: var(--clr-code-comment); } /* Comment.Single */
+.highlight .cs { color: var(--clr-code-comment); } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
-.highlight .kn { color: #f92672 } /* Keyword.Namespace */
-.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
-.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
-.highlight .kt { color: #66d9ef } /* Keyword.Type */
-.highlight .ld { color: #e6db74 } /* Literal.Date */
-.highlight .m { color: #ae81ff } /* Literal.Number */
-.highlight .s { color: #e6db74 } /* Literal.String */
-.highlight .na { color: #a6e22e } /* Name.Attribute */
-.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
-.highlight .nc { color: #a6e22e } /* Name.Class */
-.highlight .no { color: #66d9ef } /* Name.Constant */
-.highlight .nd { color: #a6e22e } /* Name.Decorator */
-.highlight .ni { color: #f8f8f2 } /* Name.Entity */
-.highlight .ne { color: #a6e22e } /* Name.Exception */
-.highlight .nf { color: #a6e22e } /* Name.Function */
-.highlight .nl { color: #f8f8f2 } /* Name.Label */
-.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #a6e22e } /* Name.Other */
-.highlight .py { color: #f8f8f2 } /* Name.Property */
-.highlight .nt { color: #f92672 } /* Name.Tag */
-.highlight .nv { color: #f8f8f2 } /* Name.Variable */
-.highlight .ow { color: #f92672 } /* Operator.Word */
-.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
-.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
-.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
-.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
-.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
-.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
-.highlight .sc { color: #e6db74 } /* Literal.String.Char */
-.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
-.highlight .se { color: #ae81ff } /* Literal.String.Escape */
-.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
-.highlight .sx { color: #e6db74 } /* Literal.String.Other */
-.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
-.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
-.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+.highlight .kc { color: var(--clr-code-constant); } /* Keyword.Constant */
+.highlight .kd { color: var(--clr-code-constant); } /* Keyword.Declaration */
+.highlight .kn { color: var(--clr-code-operator); } /* Keyword.Namespace */
+.highlight .kp { color: var(--clr-code-constant); } /* Keyword.Pseudo */
+.highlight .kr { color: var(--clr-code-constant); } /* Keyword.Reserved */
+.highlight .kt { color: var(--clr-code-constant); } /* Keyword.Type */
+.highlight .ld { color: var(--clr-code-date); } /* Literal.Date */
+.highlight .m { color: var(--clr-code-literal); } /* Literal.Number */
+.highlight .s { color: var(--clr-code-date); } /* Literal.String */
+.highlight .na { color: var(--clr-code-other); } /* Name.Attribute */
+.highlight .nb { color: var(--clr-code-name); } /* Name.Builtin */
+.highlight .nc { color: var(--clr-code-other); } /* Name.Class */
+.highlight .no { color: var(--clr-code-constant); } /* Name.Constant */
+.highlight .nd { color: var(--clr-code-other); } /* Name.Decorator */
+.highlight .ni { color: var(--clr-code-name); } /* Name.Entity */
+.highlight .ne { color: var(--clr-code-other); } /* Name.Exception */
+.highlight .nf { color: var(--clr-code-other); } /* Name.Function */
+.highlight .nl { color: var(--clr-code-name); } /* Name.Label */
+.highlight .nn { color: var(--clr-code-name); } /* Name.Namespace */
+.highlight .nx { color: var(--clr-code-other); } /* Name.Other */
+.highlight .py { color: var(--clr-code-name); } /* Name.Property */
+.highlight .nt { color: var(--clr-code-operator); } /* Name.Tag */
+.highlight .nv { color: var(--clr-code-name); } /* Name.Variable */
+.highlight .ow { color: var(--clr-code-operator); } /* Operator.Word */
+.highlight .w { color: var(--clr-code-name); } /* Text.Whitespace */
+.highlight .mf { color: var(--clr-code-literal); } /* Literal.Number.Float */
+.highlight .mh { color: var(--clr-code-literal); } /* Literal.Number.Hex */
+.highlight .mi { color: var(--clr-code-literal); } /* Literal.Number.Integer */
+.highlight .mo { color: var(--clr-code-literal); } /* Literal.Number.Oct */
+.highlight .sb { color: var(--clr-code-date); } /* Literal.String.Backtick */
+.highlight .sc { color: var(--clr-code-date); } /* Literal.String.Char */
+.highlight .sd { color: var(--clr-code-date); } /* Literal.String.Doc */
+.highlight .s2 { color: var(--clr-code-date); } /* Literal.String.Double */
+.highlight .se { color: var(--clr-code-literal); } /* Literal.String.Escape */
+.highlight .sh { color: var(--clr-code-date); } /* Literal.String.Heredoc */
+.highlight .si { color: var(--clr-code-date); } /* Literal.String.Interpol */
+.highlight .sx { color: var(--clr-code-date); } /* Literal.String.Other */
+.highlight .sr { color: var(--clr-code-date); } /* Literal.String.Regex */
+.highlight .s1 { color: var(--clr-code-date); } /* Literal.String.Single */
+.highlight .ss { color: var(--clr-code-date); } /* Literal.String.Symbol */
+.highlight .bp { color: var(--clr-code-name); } /* Name.Builtin.Pseudo */
+.highlight .vc { color: var(--clr-code-name); } /* Name.Variable.Class */
+.highlight .vg { color: var(--clr-code-name); } /* Name.Variable.Global */
+.highlight .vi { color: var(--clr-code-name); } /* Name.Variable.Instance */
+.highlight .il { color: var(--clr-code-literal); } /* Literal.Number.Integer.Long */
+.highlight .gu { color: var(--clr-code-comment); } /* Generic.Subheading & Diff Unified/Comment? */
+.highlight .gd { color: var(--clr-code-operator); } /* Generic.Deleted & Diff Deleted */
+.highlight .gi { color: var(--clr-code-other); } /* Generic.Inserted & Diff Inserted */
 
-.highlight .gh { } /* Generic Heading & Diff Header */
-.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
-.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
+/* Error */
+.highlight .err {
+  color: var(--clr-code-error);
+  background-color: var(--clr-code-background-error);
+}
+
+/* Generic Heading & Diff Header */
+// .highlight .gh {}
