--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -62,14 +62,14 @@ font-weight: 600;
 src: url("../fonts/oswald-v49-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 :root {
---clr-foreground: #262626;
---clr-background: #f5f7fa;
---clr-primary: #dde4ee;
---clr-accent: #467ece;
+--clr-foreground: #1a1a1a;
+--clr-background: #eee9e2;
+--clr-primary: #e4d3b5;
+--clr-accent: #daab5b;
 --ff-body: "Source Serif 4", serif;
 --ff-header: "Oswald", sans-serif;
---fs-1: 1rem;
---fs-2: 1.25rem;
+--fs-1: 0.875rem;
+--fs-2: 1.125rem;
 --fs-3: 2.5rem;
 --fs-4: 3rem;
 --fs-5: 4rem;
@@ -77,7 +77,7 @@ src: url("../fonts/oswald-v49-latin-600.woff2") format("woff2"); /* Chrome 36+, 
 --fw-2: 400;
 --fw-3: 600;
 --flow-spacer: 1em;
---container-max-width: 75ch;
+--container-max-width: 84ch;
 }
 html {
 scroll-behavior: smooth;
@@ -143,7 +143,7 @@ text-align: center;
 height: 100%;
 }
 .primary-header {
-background-color: var(--clr-primary);
+background-color: var(--clr-background);
 padding: 0.5rem 0;
 }
 .primary-header > section {
@@ -164,7 +164,7 @@ gap: 1rem;
 .primary-footer {
 display: grid;
 justify-content: center;
-background-color: var(--clr-primary);
+background-color: var(--clr-background);
 gap: 0.5rem;
 padding: 1rem;
 }
@@ -193,45 +193,53 @@ padding: 1rem;
 font-family: monospace;
 font-size: var(--fs-1);
 }
+:root {
+--clr-code-background: #272822;
+--clr-code-error: #960050;
+--clr-code-background-error: #1e0010;
+--clr-code-comment: #75715e;
+--clr-code-constant: #66d9ef;
+--clr-code-literal: #ae81ff;
+--clr-code-name: #f8f8f2;
+--clr-code-operator: #f92672;
+--clr-code-date: #e6db74;
+--clr-code-other: #a6e22e;
+}
 .highlight pre {
-background-color: #272822;
+background-color: var(--clr-code-background);
 }
 .highlight .hll {
-background-color: #272822;
+background-color: var(--clr-code-background);
 }
 .highlight .c {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Comment */
-.highlight .err {
-color: #960050;
-background-color: #1e0010;
-} /* Error */
 .highlight .k {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword */
 .highlight .l {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal */
 .highlight .n {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name */
 .highlight .o {
-color: #f92672;
+color: var(--clr-code-operator);
 } /* Operator */
 .highlight .p {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Punctuation */
 .highlight .cm {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Comment.Multiline */
 .highlight .cp {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Comment.Preproc */
 .highlight .c1 {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Comment.Single */
 .highlight .cs {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Comment.Special */
 .highlight .ge {
 font-style: italic;
@@ -240,148 +248,153 @@ font-style: italic;
 font-weight: bold;
 } /* Generic.Strong */
 .highlight .kc {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword.Constant */
 .highlight .kd {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword.Declaration */
 .highlight .kn {
-color: #f92672;
+color: var(--clr-code-operator);
 } /* Keyword.Namespace */
 .highlight .kp {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword.Pseudo */
 .highlight .kr {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword.Reserved */
 .highlight .kt {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Keyword.Type */
 .highlight .ld {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.Date */
 .highlight .m {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number */
 .highlight .s {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String */
 .highlight .na {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Attribute */
 .highlight .nb {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Builtin */
 .highlight .nc {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Class */
 .highlight .no {
-color: #66d9ef;
+color: var(--clr-code-constant);
 } /* Name.Constant */
 .highlight .nd {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Decorator */
 .highlight .ni {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Entity */
 .highlight .ne {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Exception */
 .highlight .nf {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Function */
 .highlight .nl {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Label */
 .highlight .nn {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Namespace */
 .highlight .nx {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Name.Other */
 .highlight .py {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Property */
 .highlight .nt {
-color: #f92672;
+color: var(--clr-code-operator);
 } /* Name.Tag */
 .highlight .nv {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Variable */
 .highlight .ow {
-color: #f92672;
+color: var(--clr-code-operator);
 } /* Operator.Word */
 .highlight .w {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Text.Whitespace */
 .highlight .mf {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number.Float */
 .highlight .mh {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number.Hex */
 .highlight .mi {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number.Integer */
 .highlight .mo {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number.Oct */
 .highlight .sb {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Backtick */
 .highlight .sc {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Char */
 .highlight .sd {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Doc */
 .highlight .s2 {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Double */
 .highlight .se {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.String.Escape */
 .highlight .sh {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Heredoc */
 .highlight .si {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Interpol */
 .highlight .sx {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Other */
 .highlight .sr {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Regex */
 .highlight .s1 {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Single */
 .highlight .ss {
-color: #e6db74;
+color: var(--clr-code-date);
 } /* Literal.String.Symbol */
 .highlight .bp {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Builtin.Pseudo */
 .highlight .vc {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Variable.Class */
 .highlight .vg {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Variable.Global */
 .highlight .vi {
-color: #f8f8f2;
+color: var(--clr-code-name);
 } /* Name.Variable.Instance */
 .highlight .il {
-color: #ae81ff;
+color: var(--clr-code-literal);
 } /* Literal.Number.Integer.Long */
-/* Generic Heading & Diff Header */
 .highlight .gu {
-color: #75715e;
+color: var(--clr-code-comment);
 } /* Generic.Subheading & Diff Unified/Comment? */
 .highlight .gd {
-color: #f92672;
+color: var(--clr-code-operator);
 } /* Generic.Deleted & Diff Deleted */
 .highlight .gi {
-color: #a6e22e;
+color: var(--clr-code-other);
 } /* Generic.Inserted & Diff Inserted */
+/* Error */
+.highlight .err {
+color: var(--clr-code-error);
+background-color: var(--clr-code-background-error);
+}
+/* Generic Heading & Diff Header */
 /*# sourceMappingURL=base.css.map */
