--- a/_app/assets/styles/base.scss
+++ b/_app/assets/styles/base.scss
@@ -3,5 +3,8 @@
 
 @import "reset";
 @import "fonts";
+@import "colors";
+@import "font-sizes";
+@import "spacing";
 @import "layout";
 @import "code-highlight";
