Light and dark mode colors

--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -131,7 +131,8 @@ strong {
 
   blockquote {
     box-shadow: inset 4px 0 0 0 var(--clr-accent);
-    padding-left: 1rem;
+    background-color: var(--clr-secondary);
+    padding: 1em;
     font-style: italic;
   }
 
