--- a/_app/_sass/fonts.scss
+++ b/_app/_sass/fonts.scss
@@ -1,44 +1,23 @@
-/* source-serif-4-300 - latin */
 @font-face {
-  font-display: fallback;
   font-family: 'Source Serif 4';
+  src: url('../fonts/source-serif-4-variable.woff2') format('woff2');
+  font-display: fallback;
+  font-weight: 200 900;
   font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/source-serif-4-v7-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-/* source-serif-4-300italic - latin */
 @font-face {
-  font-display: fallback;
   font-family: 'Source Serif 4';
+  src: url('../fonts/source-serif-4-variable-italic.woff2') format('woff2');
+  font-weight: 200 900;
   font-style: italic;
-  font-weight: 300;
-  src: url('../fonts/source-serif-4-v7-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-display: fallback;
 }
 
-/* source-serif-4-regular - latin */
 @font-face {
-  font-display: fallback;
-  font-family: 'Source Serif 4';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/source-serif-4-v7-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-/* source-serif-4-italic - latin */
-@font-face {
-  font-display: fallback;
-  font-family: 'Source Serif 4';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/source-serif-4-v7-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-/* oswald-600 - latin */
-@font-face {
-  font-display: fallback;
   font-family: 'Oswald';
-  font-style: normal;
+  src: url('../fonts/oswald-semibold.woff2') format('woff2');
   font-weight: 600;
-  src: url('../fonts/oswald-v49-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-style: normal;
+  font-display: fallback;
 }
