--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -51,7 +51,11 @@ hr {
 }
 
 strong {
-  font-weight: var(--fw-3);
+  font-weight: var(--fw-4);
+}
+
+em {
+  font-style: italic;
 }
 
 :not(.highlight) > code {
