--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -14,6 +14,10 @@ body {
   line-height: 1.75;
   letter-spacing: -0.25px;
   color: var(--clr-foreground);
+
+  & > * {
+    overflow: auto;
+  }
 }
 
 h1, h2, h3 {
