Tag links are styled

--- a/_app/_layouts/post.html
+++ b/_app/_layouts/post.html
@@ -4,8 +4,19 @@ layout: default
 
 <article class="post container flow">
   <header>
-    <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
     <h1>{{ page.title | escape }}</h1>
+    <div class="subheader">
+      <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+      {% if page.tags != empty  %}
+        <div class="tags">
+          {% for tag in page.tags %}
+            <a href="/tag/{{ tag }}" class="tag">
+              {{ tag }}
+            </a>
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
   </header>
 
   {{ content }}
