--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -127,14 +127,41 @@ em {
   padding: 1rem;
 }
 
+.tags {
+  display: flex;
+  flex-direction: row;
+  gap: 0.25rem;
+
+  a.tag {
+    display: inline-block;
+    padding: 0 0.5rem;
+    background-color: var(--clr-primary);
+    font-size: var(--fs-1);
+    text-decoration: none;
+    border-radius: 0.25rem;
+
+    &:hover {
+      background-color: var(--clr-accent);
+    }
+  }
+}
+
 .post {
   margin-top: 1.5rem;
   margin-bottom: 3rem;
 
-  header time {
-    font-size: var(--fs-1);
-    font-weight: var(--fw-1);
-    font-style: italic;
+  header {
+    .subheader {
+      display: flex;
+      flex-direction: column;
+      padding-top: 1rem;
+      gap: 0.25rem;
+    }
+
+    time {
+      font-size: var(--fs-2);
+      font-weight: var(--fw-1);
+    }
   }
 
   blockquote {
