--- a/_app/_sass/layout.scss
+++ b/_app/_sass/layout.scss
@@ -124,15 +124,15 @@ em {
 .tags {
   display: flex;
   flex-direction: row;
-  gap: 0.25rem;
+  gap: 0.5rem;
 
   a.tag {
     display: inline-block;
-    padding: 0 0.5rem;
+    padding: 0.25rem 0.75rem;
     background-color: var(--clr-primary);
     font-size: var(--fs-1);
     text-decoration: none;
-    border-radius: 0.25rem;
+    border-radius: 0.5rem;
 
     &:hover {
       background-color: var(--clr-accent);
@@ -148,8 +148,7 @@ em {
     .subheader {
       display: flex;
       flex-direction: column;
-      padding-top: 1rem;
-      gap: 0.25rem;
+      padding-top: 0.5rem;
     }
 
     time {
