--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -202,15 +202,15 @@ padding: 1rem;
 .tags {
 display: flex;
 flex-direction: row;
-gap: 0.25rem;
+gap: 0.5rem;
 }
 .tags a.tag {
 display: inline-block;
-padding: 0 0.5rem;
+padding: 0.25rem 0.75rem;
 background-color: var(--clr-primary);
 font-size: var(--fs-1);
 text-decoration: none;
-border-radius: 0.25rem;
+border-radius: 0.5rem;
 }
 .tags a.tag:hover {
 background-color: var(--clr-accent);
@@ -222,8 +222,7 @@ margin-bottom: 3rem;
 .post header .subheader {
 display: flex;
 flex-direction: column;
-padding-top: 1rem;
-gap: 0.25rem;
+padding-top: 0.5rem;
 }
 .post header time {
 font-size: var(--fs-2);
