Code block font family is controlled

--- a/_app/_sass/font-sizes.scss
+++ b/_app/_sass/font-sizes.scss
@@ -2,6 +2,7 @@
   /* fonts */
   --ff-body: 'Source Serif 4', serif;
   --ff-header: 'Oswald', sans-serif;
+  --ff-code: 'Roboto Mono', monospace;
 
   /* font sizes */
   --fs-1: 0.875rem;
