--- a/_app/_sass/fonts.scss
+++ b/_app/_sass/fonts.scss
@@ -21,3 +21,10 @@
   font-style: normal;
   font-display: fallback;
 }
+
+@font-face {
+  font-family: 'Roboto Mono';
+  src: url('../fonts/roboto-mono.woff2') format('woff2');
+  font-style: normal;
+  font-display: fallback;
+}
