--- a/_app/_layouts/default.html
+++ b/_app/_layouts/default.html
@@ -13,6 +13,7 @@
     <link rel="preload" href="/assets/fonts/oswald-semibold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/source-serif-4-variable-italic.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/source-serif-4-variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/roboto-mono.woff2" as="font" type="font/woff2" crossorigin>
 
     {% for css in layout.css %}
       <link rel="stylesheet" href="/assets/styles/{{ css }}" />
