Styles are reorganized

--- a/_app/assets/styles/base.scss
+++ b/_app/assets/styles/base.scss
@@ -4,7 +4,11 @@
 @import "reset";
 @import "fonts";
 @import "colors";
-@import "font-sizes";
+@import "syntax-highlight";
 @import "spacing";
-@import "layout";
-@import "code-highlight";
+@import "elements";
+@import "exceptions";
+@import "social-media";
+@import "layouts";
+@import "posts";
+@import "tags";
