--- a/_app/_layouts/default.html
+++ b/_app/_layouts/default.html
@@ -29,6 +29,7 @@
       <section class="container">
         <a href="/">na</a>
         <nav>
+          {% include theme-toggle.html %}
           <a href="#">blog</a>
           <a href="#">projects</a>
         </nav>
