deploy: bb12eb3a2850212dd0671a7c56f2e460a032a9b9

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -87,6 +87,9 @@ font-display: fallback;
 .dark {
 color-scheme: dark;
 }
+.light {
+color-scheme: light;
+}
 .highlight pre {
 background-color: var(--clr-code-background);
 }
