Theme toggle is styled

--- a/_app/assets/styles/base.scss
+++ b/_app/assets/styles/base.scss
@@ -8,6 +8,7 @@
 @import "spacing";
 @import "elements";
 @import "exceptions";
+@import "theme-toggle";
 @import "social-media";
 @import "layouts";
 @import "posts";
