--- a/_app/_layouts/post.html
+++ b/_app/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
     <h1>{{ page.title | escape }}</h1>
     <div class="subheader">
       <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+      {% include reading-time.html %}
     </div>
   </header>
 
