--- a/_app/_sass/posts.scss
+++ b/_app/_sass/posts.scss
@@ -8,14 +8,31 @@
 
   header {
     .subheader {
-      display: flex;
-      flex-direction: column;
-      padding-top: 0.5rem;
-    }
+      --horizontal-spacing: 0.75rem;
 
-    time {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: var(--horizontal-spacing);
+
+      padding-top: 0.5rem;
+
       font-size: var(--fs-2);
       font-weight: var(--fw-1);
+
+      * + * {
+        display: flex;
+        align-items: center;
+      }
+
+      * + *:before {
+        content: '';
+        display: inline-block;
+        height: 1rem;
+        width: 1px;
+        margin-right: var(--horizontal-spacing);
+        background-color: currentColor;
+      }
     }
   }
 
