--- a/_app/_sass/theme-toggle.scss
+++ b/_app/_sass/theme-toggle.scss
@@ -7,18 +7,16 @@
   width: 1.5rem;
   overflow: hidden;
   position: relative;
+  border: 1px solid currentColor;
   border-radius: 0.25rem;
   padding: 0 0.25rem;
-
-  background-color: var(--clr-foreground);
-  color: var(--clr-background);
 
   .icons {
     height: 2rem;;
     transition: 0.1s;
 
     * {
-      margin: 2px 0;
+      margin: 1px 0;
       width: 1.25rem;
       height: 1.25rem;
     }
@@ -29,11 +27,12 @@
   }
 
   input[type=checkbox]:checked + .icons {
-    transform: translateY(-1.4rem);
+    transform: translateY(-1.35rem);
   }
 
   &:hover {
     cursor: pointer;
+    background-color: color-mix(in lab, var(--clr-background) 20%, var(--clr-accent));
   }
 }
 
