--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -350,10 +350,9 @@ height: 1.5rem;
 width: 1.5rem;
 overflow: hidden;
 position: relative;
+border: 1px solid currentColor;
 border-radius: 0.25rem;
 padding: 0 0.25rem;
-background-color: var(--clr-foreground);
-color: var(--clr-background);
 }
 #theme-toggle > input {
 display: none;
@@ -363,7 +362,7 @@ height: 2rem;
 transition: 0.1s;
 }
 #theme-toggle .icons * {
-margin: 2px 0;
+margin: 1px 0;
 width: 1.25rem;
 height: 1.25rem;
 }
@@ -371,10 +370,11 @@ height: 1.25rem;
 padding: 0 1px 1px 1px;
 }
 #theme-toggle input[type=checkbox]:checked + .icons {
-transform: translateY(-1.4rem);
+transform: translateY(-1.35rem);
 }
 #theme-toggle:hover {
 cursor: pointer;
+background-color: color-mix(in lab, var(--clr-background) 20%, var(--clr-accent));
 }
 body {
 transition: background-color 0.2s, color 0.4s ease-in-out;
