--- a/_app/_sass/layouts.scss
+++ b/_app/_sass/layouts.scss
@@ -33,6 +33,11 @@
   }
 }
 
+.primary-content {
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
+}
+
 .primary-footer {
   display: grid;
   justify-content: center;
