--- a/_app/assets/styles/base.scss
+++ b/_app/assets/styles/base.scss
@@ -7,6 +7,7 @@
 @import "syntax-highlight";
 @import "spacing";
 @import "elements";
+@import "text";
 @import "exceptions";
 @import "theme-toggle";
 @import "social-media";
