--- a/_app/_sass/layouts.scss
+++ b/_app/_sass/layouts.scss
@@ -10,7 +10,7 @@
 
 .primary-header {
   padding: 0.5rem 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 
   & > section {
     display: flex;
@@ -35,9 +35,12 @@
 }
 
 .primary-footer {
-  display: grid;
-  justify-content: center;
-  gap: 0.5rem;
-  padding: 1rem;
-  margin-top: 3rem;
+  padding: 0.5rem 0;
+  margin-top: 1rem;
+
+  > * {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1em;
+  }
 }
