--- a/_app/_includes/reading-time.html
+++ b/_app/_includes/reading-time.html
@@ -1,9 +1,9 @@
-{% capture words %}
-  {{ content | number_of_words | minus: 180 }}
-{% endcapture %}
+{% assign words = include.content | strip_html | number_of_words %}
 
-{% unless words contains '-' %}
-  <span>
-    {{ words | plus: 150 | divided_by: 150 | append: ' min read' }}
-  </span>
-{% endunless %}
+<span>
+  {% if words < 300 %}
+    1 min read
+  {% else %}
+    {{ words | divided_by: 150 | append: ' min read' }}
+  {% endif %}
+</span>
