--- a/_app/_sass/social-media.scss
+++ b/_app/_sass/social-media.scss
@@ -2,7 +2,10 @@
   display: flex;
   align-items: center;
 
-  a {
+  a, svg {
     color: inherit;
+    width: 1em;
+    height: 1em;
+    margin-bottom: 2px;
   }
 }
