--- a/_app/_includes/post-previews.html
+++ b/_app/_includes/post-previews.html
@@ -6,7 +6,7 @@
           {{ post.title }}
         </a>
         <div class="post-metadata">
-          <time datetime="{{ post.date }}">{{ post.date | date: "%B %d, %Y" }}</time>
+          <time datetime="{{ post.date }}">{{ post.date | date: "%B %-d, %Y" }}</time>
           {% include reading-time.html content=post.content %}
         </div>
       </header>
